--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
+body {
+    font-size: 16px;
+}
 nav {
     display: grid;
     width: 100%;
-    grid-row: ;
     align-items: center;
     grid-template-columns: auto 1fr auto;
     grid-template-rows: auto;
@@ -10,7 +12,16 @@ nav {
     align-content: space-between;
     column-gap: 0px;
     grid-template-areas: "logo links spacer navPOI button";
+    font-size: 16px;
+    
 }
+.navLink:hover {
+    border: 1px solid #000;
+}
+.poiLink:hover {
+    border: 1px solid #000;
+}
+
 .logo {
     
     grid-area: logo;
@@ -63,8 +74,32 @@ nav {
 .poiLink{
     margin: 2px;
 }
+.page1 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: gainsboro;
+}
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;  
+}
+img {
+    border: 3px solid black ;
+    border-bottom-style: none;
+}
+
+footer {
+    background-color: azure;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.socialCon {
     
-  
+}
 
 
 
@@ -79,4 +114,13 @@ nav {
     nav {
       display: none;
     }
+    
+}
+
+
+@media(max-width: 620px) {
+    img {
+        display: none;
+    }
   }
+
